# translation-konjac

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-25-translation-overlay.md
docs/superpowers/specs/: 2026-05-25-translation-overlay-design.md  2026-05-29-font-size-control-design.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  diff.rs  history.rs  lib.rs  main.rs  translate.rs
src-tauri/src/capture/: macos.rs  mod.rs  windows.rs
src/components/: LanguagePicker.tsx  ToolbarControls.tsx  TranslationDisplay.tsx
