[package]
name = "translation-konjac"
version = "0.1.0"
description = "Konjac Translation Overlay"
authors = []
edition = "2021"

[lib]
name = "translation_konjac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
toml = "0.8"
dirs = "5"
thiserror = "2"
keyring = "3"


[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
wiremock = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
